// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getWorkspaceInfo 1`] = `
{
  "location": "packages/modular-types",
  "mismatchedWorkspaceDependencies": [],
  "public": true,
  "type": "unknown",
  "version": Any<String>,
  "workspaceDependencies": [],
}
`;

exports[`getWorkspaceInfo 2`] = `
{
  "location": "packages/workspace-resolver",
  "mismatchedWorkspaceDependencies": [],
  "public": true,
  "type": "unknown",
  "version": Any<String>,
  "workspaceDependencies": [
    "@modular-scripts/modular-types",
  ],
}
`;

exports[`getWorkspaceInfo 3`] = `
{
  "location": "packages/create-modular-react-app",
  "mismatchedWorkspaceDependencies": [],
  "public": true,
  "type": "source",
  "version": Any<String>,
  "workspaceDependencies": [],
}
`;

exports[`getWorkspaceInfo 4`] = `
{
  "location": "packages/eslint-config-modular-app",
  "mismatchedWorkspaceDependencies": [],
  "public": true,
  "type": "unknown",
  "version": Any<String>,
  "workspaceDependencies": [],
}
`;

exports[`getWorkspaceInfo 5`] = `
{
  "location": "packages/modular-scripts",
  "mismatchedWorkspaceDependencies": [],
  "public": true,
  "type": "source",
  "version": Any<String>,
  "workspaceDependencies": [
    "@modular-scripts/modular-types",
    "@modular-scripts/workspace-resolver",
  ],
}
`;

exports[`getWorkspaceInfo 6`] = `
{
  "location": "packages/modular-template-app",
  "mismatchedWorkspaceDependencies": [],
  "public": true,
  "type": "template",
  "version": Any<String>,
  "workspaceDependencies": [],
}
`;

exports[`getWorkspaceInfo 7`] = `
{
  "location": "packages/modular-template-esm-view",
  "mismatchedWorkspaceDependencies": [],
  "public": true,
  "type": "template",
  "version": Any<String>,
  "workspaceDependencies": [],
}
`;

exports[`getWorkspaceInfo 8`] = `
{
  "location": "packages/modular-template-node-env-app",
  "mismatchedWorkspaceDependencies": [],
  "public": false,
  "type": "template",
  "version": Any<String>,
  "workspaceDependencies": [],
}
`;

exports[`getWorkspaceInfo 9`] = `
{
  "location": "packages/modular-template-package",
  "mismatchedWorkspaceDependencies": [],
  "public": true,
  "type": "template",
  "version": Any<String>,
  "workspaceDependencies": [],
}
`;

exports[`getWorkspaceInfo 10`] = `
{
  "location": "packages/modular-template-source",
  "mismatchedWorkspaceDependencies": [],
  "public": true,
  "type": "template",
  "version": Any<String>,
  "workspaceDependencies": [],
}
`;

exports[`getWorkspaceInfo 11`] = `
{
  "location": "packages/modular-template-view",
  "mismatchedWorkspaceDependencies": [],
  "public": true,
  "type": "template",
  "version": Any<String>,
  "workspaceDependencies": [],
}
`;

exports[`getWorkspaceInfo 12`] = `
{
  "location": "packages/modular-views.macro",
  "mismatchedWorkspaceDependencies": [],
  "public": true,
  "type": "unknown",
  "version": Any<String>,
  "workspaceDependencies": [],
}
`;

exports[`getWorkspaceInfo 13`] = `
{
  "location": "packages/sample-async-package",
  "mismatchedWorkspaceDependencies": [],
  "public": true,
  "type": "package",
  "version": Any<String>,
  "workspaceDependencies": [],
}
`;

exports[`getWorkspaceInfo 14`] = `
{
  "location": "packages/tree-view-for-tests",
  "mismatchedWorkspaceDependencies": [],
  "public": false,
  "type": "unknown",
  "version": Any<String>,
  "workspaceDependencies": [],
}
`;
